--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
-*.swp
-*~
-*.iml
-.*.haste_cache.*
-.DS_Store
-.idea
-npm-debug.log
+# package directories
 node_modules
-dist
+jspm_packages
+
+# Directories
+.serverless
+.webpack
+.netlify
+/coverage
+/dist
+/build
+/typings
+/.awcache
+/.ssh
+/electron.js*
+
+# Files
+.DS_STORE
+npm-debug.log*
+yarn-error.log*
+.env
+serverless.env.yml
+.nyc_output
+
+coverage.lcov
+engine.json
