Update Badges, CI Config, Release Script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,23 @@
 language: node_js
+
 node_js:
   - stable
+
 dist: trusty
+
 sudo: false
+
 cache:
   npm: true
   directories:
     - node_modules
+
+before_script:
+  - greenkeeper-lockfile-update
+  - yarn test:coverage
+
+script:
+  - yarn build
+
+after_script:
+  - greenkeeper-lockfile-upload
