--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ cache:
   directories:
     - node_modules
 
+before_install:
+  - yarn global add greenkeeper-lockfile@1
+
 before_script:
   - greenkeeper-lockfile-update
   - yarn test:coverage
