--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
+    "codecov": "^3.0.0",
     "eslint": "^5.4.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jest": "^21.15.1",
