--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "scalars"
   ],
   "main": "dist/index.js",
-  "umd:main": "dist/index.umd.js",
-  "module": "dist/index.mjs",
-  "source": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "dist/*",
     "src/*",
@@ -26,8 +24,8 @@
     "*.map"
   ],
   "scripts": {
-    "build": "microbundle",
-    "dev": "microbundle watch",
+    "start": "nodemon --exec babel-node example/index.js",
+    "build": "webpack",
     "lint": "eslint ./src",
     "test": "yarn lint && jest -c ./jest.config.js",
     "test:watch": "jest -c ./jest.config.js --watch",
@@ -43,22 +41,27 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "apollo-server": "^2.0.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.0",
     "codecov": "^3.0.0",
     "eslint": "^5.4.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-promise": "^4.0.0",
     "graphql": "^14.0.0",
+    "graphql-tools": "^3.1.1",
     "jest": "^23.5.0",
     "lint-staged": "^7.1.3",
-    "microbundle": "^0.6.0",
+    "nodemon": "^1.18.4",
     "prettier": "^1.7.0",
-    "snyk": "^1.42.6"
+    "snyk": "^1.42.6",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
     "graphql": "^14.0.0"
