--- a/package.json
+++ b/package.json
@@ -13,53 +13,68 @@
     "graphql",
     "scalars"
   ],
-  "main": "dist/index.js",
-  "module": "src/index.js",
-  "files": [
-    "dist/*",
-    "src/*",
-    "*.json",
-    "*.js",
-    "*.mjs",
-    "*.map"
-  ],
+  "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
+    "dev": "nodemon --watch src --watch example --exec run-s build serve",
+    "build": "pack build",
+    "serve": "babel-node --config-file ./example/.babelrc.js example/index.js",
     "lint": "eslint ./src",
     "test": "yarn lint && jest -c ./jest.config.js",
     "test:watch": "jest -c ./jest.config.js --watch",
     "test:coverage": "jest -c ./jest.config.js && codecov",
     "precommit": "lint-staged",
     "prepublish": "snyk protect",
-    "prepublishOnly": "yarn test && yarn build",
-    "release": "yarn publish --access public"
+    "release": "pack publish"
   },
   "dependencies": {
-    "joi": "^13.6.0",
+    "@hapi/joi": "^15.0.1",
     "joi-postalcode": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.4.4",
+    "@pika/pack": "^0.3.7",
+    "@pika/plugin-build-node": "^0.3.16",
+    "@pika/plugin-standard-pkg": "^0.3.16",
+    "@types/graphql": "14.2.0",
+    "apollo-server": "^2.4.8",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0",
-    "codecov": "^3.0.0",
-    "eslint": "^5.4.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^21.15.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "graphql": "^14.0.0",
-    "jest": "^23.5.0",
-    "lint-staged": "^7.1.3",
-    "prettier": "^1.7.0",
-    "snyk": "^1.42.6",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "babel-jest": "^24.7.1",
+    "codecov": "^3.3.0",
+    "core-js": "3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
+    "jest": "^24.7.1",
+    "lint-staged": "^8.1.5",
+    "nodemon": "1.19.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.17.0",
+    "snyk": "^1.158.0"
   },
   "peerDependencies": {
     "graphql": "^14.0.0"
+  },
+  "@pika/pack": {
+    "pipeline": [
+      [
+        "@pika/plugin-standard-pkg",
+        {
+          "exclude": [
+            "__TEST__/*"
+          ]
+        }
+      ],
+      [
+        "@pika/plugin-build-node",
+        {}
+      ]
+    ]
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
