--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@saeris/graphql-scalars",
   "version": "1.3.3",
   "description": "A collection of scalar types using Joi for validation.",
-  "author": "Drake Costa <drake@saeris.io> (http://saeris.github.io/)",
+  "author": "Drake Costa <drake@saeris.io> (https://github.com/Saeris/)",
   "repository": {
     "type": "git",
     "url": "https://github.com/saeris/graphql-scalars.git"
