--- a/package.json
+++ b/package.json
@@ -13,49 +13,60 @@
     "graphql",
     "scalars"
   ],
-  "main": "src/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --watch src --watch example --exec run-s build serve",
-    "build": "pack build",
-    "serve": "babel-node --config-file ./example/.babelrc.js example/index.js",
+    "build": "pika build",
+    "serve": "babel-node --extensions \".ts,.tsx\" example/index.ts",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint ./src",
-    "test": "yarn lint && jest -c ./jest.config.js",
+    "test": "yarn lint && yarn typecheck && jest -c ./jest.config.js",
     "test:watch": "jest -c ./jest.config.js --watch",
     "test:coverage": "jest -c ./jest.config.js && codecov",
     "precommit": "lint-staged",
-    "prepublish": "snyk protect",
-    "release": "pack publish"
+    "release": "pika publish"
   },
   "dependencies": {
-    "@hapi/joi": "^15.0.1",
-    "joi-postalcode": "^1.0.0"
+    "@hapi/joi": "^15.0.0",
+    "joi-postalcode": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.4.4",
-    "@pika/pack": "^0.3.7",
-    "@pika/plugin-build-node": "^0.3.16",
-    "@pika/plugin-standard-pkg": "^0.3.16",
-    "@types/graphql": "14.2.0",
-    "apollo-server": "^2.4.8",
+    "@babel/core": "^7.8.7",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-typescript": "^7.8.3",
+    "@pika/pack": "^0.5.0",
+    "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-build-types": "^0.9.2",
+    "@pika/plugin-standard-pkg": "^0.9.2",
+    "@types/graphql": "^14.5.0",
+    "@types/hapi__joi": "^16.0.12",
+    "@types/node": "^13.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "apollo-server": "^2.11.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
-    "codecov": "^3.3.0",
-    "core-js": "3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.5.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "graphql": "^14.2.1",
-    "graphql-tag": "^2.10.1",
-    "jest": "^24.7.1",
-    "lint-staged": "^8.1.5",
-    "nodemon": "1.19.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.1.0",
+    "codecov": "^3.6.5",
+    "core-js": "3.6.4",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.0.8",
+    "nodemon": "2.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.0",
-    "snyk": "^1.158.0"
+    "prettier": "^1.19.1",
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "graphql": "^14.0.0"
@@ -71,13 +82,14 @@
         }
       ],
       [
-        "@pika/plugin-build-node",
-        {}
+        "@pika/plugin-build-node"
+      ],
+      [
+        "@pika/plugin-build-types"
       ]
     ]
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
-  },
-  "snyk": true
+  }
 }
