--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,13 @@ dist: trusty
 sudo: false
 
 cache:
-  npm: true
+  yarn: true
   directories:
     - node_modules
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
 
 before_script:
   - yarn test:coverage
