--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "moduleResolution": "node",
     "sourceMap": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
