--- a/.fiddly.config.json
+++ b/.fiddly.config.json
@@ -1,5 +1,6 @@
 {
 	"noHeader": true,
 	"repo": "https://github.com/saeris/graphql-scalars",
-	"dist": "dist"
+	"dist": "dist",
+	"styles": "public/styles.css"
 }
