--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.0.0",
-    "joi-postalcode": "^1.0.1"
+    "joi-postalcode": "^1.0.1",
+    "postal-codes-js": "^2.5.1",
+    "uri-js": "^4.4.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -45,11 +48,13 @@
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-build-types": "^0.9.2",
+    "@pika/plugin-build-web": "^0.9.2",
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@types/graphql": "^14.5.0",
     "@types/hapi__joi": "^17.1.4",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.6.0",
+    "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "apollo-server": "^2.11.0",
@@ -87,6 +92,9 @@
       ],
       [
         "@pika/plugin-build-node"
+      ],
+      [
+        "@pika/plugin-build-web"
       ],
       [
         "@pika/plugin-build-types"
